# Tuncay-klip

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  INTELLIGENCE_PLATFORM.md  IP_PART1_ARCHITECTURE.md  IP_PART2_AI_INTELLIGENCE.md  IP_PART3_STREAM_INTELLIGENCE.md  IP_PART4_DATA_INFRASTRUCTURE.md  IP_PART5_GPU_ORCHESTRATION.md  IP_PART6_PLATFORM_ENGINEERING.md  POLYGLOT_README.md  README.md  SAD_PART1.md  SAD_PART2.md  SAD_PART3.md  alembic.ini  bug_hunt.py  build.ps1  check_imports.py  check_imports2.py  check_syntax.py  config.py  conftest.py  dev.bat  dev.py  docker-compose.postiz.yml  docker-compose.yml  e2e_test_render.py  litellm_config.yaml  main.py  pytest.ini  requirements-base.txt  requirements-ml.txt  requirements.txt  start.ps1  start.sh  test_api.py  test_cv2.py  (+4 more)
.github/workflows/: ci.yaml  ci.yml
Klip ai/: components.json  package-lock.json  package.json
Klip ai/app/: globals.css
ai_worker/: package-lock.json  package.json
ai_worker/src/: index.ts  llmClient.ts  types.ts
alembic/: env.py
alembic/versions/: 0001_add_clip_critic_columns.py
api/: __init__.py  domains.py
api/routers/: admin.py  advanced.py  analytics.py  clips.py  edit.py  graphql.py  kick_clips.py  knowledge_base.py  llm_status.py  pipeline.py  platform.py  preferences.py  projects.py  recommendations.py  search.py  smart_editor.py  social.py  system.py  viral.py
autoclipper-main/: .gitignore  README.md  docker-compose.yml
chaos/: network-latency.yaml  pod-kill.yaml
config/: feature_flags.example.json
dashboard/: package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: api.ts  health.ts  server.ts
data/: klip.db
docs/: PHASE2.md  PHASE2_QUICKSTART.md  key-rotation.md
docs/adr/: 001-cpp-signal-engine.md  002-rust-video-processor.md  003-typescript-ai-worker-llm.md  004-delete-go-render-engine.md
docs/media-infrastructure-sdd/: 01-core-engine.md  02-gpu-pipeline-hardware-encoding.md  03-intelligence-layer.md  04-typography-graphics.md  05-audio-engine.md  06-production-infrastructure.md  07-extension-system.md  08-delivery-distribution.md  09-performance-optimization.md  10-deployment-operations.md  (+3 more)
examples/: phase2_examples.py
frontend/: next.config.ts  package-lock.json  package.json
gateway/: kong.yaml
gitops/: argo-rollout.yaml  argocd-application.yaml
jose/: __init__.py  jwt.py
k8s/: decision-engine-hpa.yaml  keda-clip-generator.yaml  platform-api.yaml  triton-inference.yaml
microservices/: chat_source.py  orchestrator.py
models/: __init__.py  database.py  schemas.py
monitoring/: alertmanager.yaml  prometheus-rules.yaml
platform_eng/: __init__.py
render_engine/: go.mod  main.go
scripts/: run_shadow_traffic.py  setup_models.py  test_kick_integration.py
services/: __init__.py  action_recognizer.py  advanced_face_tracking.py  advanced_subtitle.py  ai_analysis.py  ai_critic.py  ai_pipeline.py  audio_ai.py  audio_analyzer.py  audio_mixer.py  auto_backup.py  auto_boot.py  auto_censor.py  auto_discovery.py  auto_editor.py  auto_hook.py  auto_sfx.py  beat_sync.py  cache.py  chat_ai.py  chat_sentiment.py  chat_signal_producer.py  clip_analyzer.py  clip_optimizer.py  clip_scorer.py  clip_service.py  compositor.py  cost_tracker.py  critic_analytics.py  database.py  db_ownership.py  edge_glow.py  edit_recommendation.py  edit_spec.py  effects_engine.py  emotion_arc.py  emotion_detector.py  end_screen.py  engagement_analysis.py  face_tracker.py  (+71 more)
shared/: __init__.py  event_schemas.py
signal_engine/: CMakeLists.txt
signal_engine/include/signal_engine/: api.h  audio_analyzer.h  ring_buffer.h  types.h  video_analyzer.h
signal_engine/python/: signal_client.py
signal_engine/src/: api.cpp  audio_analyzer.cpp  main.cpp  video_analyzer.cpp
signal_engine/tests/: test_all.cpp
src/: __init__.py  ai_generator.py  clipper.py  downloader.py  main.py  pipeline.py  stream_monitor.py  uploader.py  utils.py
static/: style.css
tasks/: __init__.py  pipeline_tasks.py
templates/: dashboard.html
tests/: bench_fft.py  bench_pipeline_latency.py  debug_event_flow.py  test_ab_testing.py  test_admin_endpoints.py  test_advanced_features.py  test_ai_critic.py  test_ai_extras.py  test_ai_generator.py  test_analytics.py  test_api.py  test_audio_analysis.py  test_auto_discovery.py  test_auto_editor.py  test_chat_analysis.py  test_clip_and_notification.py  test_cloudflare_risk.py  test_cross_language.py  test_decision_engine.py  test_dev_launcher.py  test_disk_monitoring.py  test_download_edit_flow.py  test_e2e_latency.py  test_event_bus.py  test_event_detector.py  test_feature_flags.py  test_graphql.py  test_kick_archive.py  test_kick_archive_api.py  test_live_stream_processor.py  test_llm_circuit_breaker.py  test_llm_client.py  test_llm_engine.py  test_memory_leak.py  test_multi_stream.py  test_nle_phase6.py  test_notification_api.py  test_observability.py  test_phase2.py  test_pipeline_api.py  (+16 more)
tools/: viral_reels_research.py  viral_reels_research_results.json
tools/audio-mixer/: Cargo.toml
tools/audio-mixer/src/: main.rs
tools/trim-detector/: Cargo.toml
tools/trim-detector/src/: main.rs
tools/video-processor/: Cargo.toml
tools/video-processor/src/: batch.rs  clip.rs  export.rs  main.rs  probe.rs  validate.rs
utils/: __init__.py  auth.py  auth_compat.py  logging_config.py  pydantic_compat.py  rate_limiter.py
(+97 files in other folders)
