[package]
name = "tuncay-audio-mixer"
version = "0.1.0"
edition = "2021"
description = "Single-pass audio mixer for Tuncay-Klip — SFX, music, ducking in one FFmpeg subprocess"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
