[package]
name = "tuncay-trim-detector"
version = "0.1.0"
edition = "2021"
description = "Native silence + freeze detection for Tuncay-Klip — outputs keep segments as JSON"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
