[package]
name = "tuncay-video-processor"
version = "0.1.0"
edition = "2021"
description = "High-performance video processing toolkit for Tuncay-Klip pipeline"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
md-5 = "0.10"
digest = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
